--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins Here
+
+.button{
+    border:2px solid @btn-bg-color;
+    background-color: @btn-bg-color;
+    color: white;
+    text-align: center;
+    font-size: 1.9rem;
+    padding: 5px 0 5px 0;
+    width: 30%;
+    border-radius: 5px;
+}
