--- a/less/variables.less
+++ b/less/variables.less
@@ -24,3 +24,12 @@
 @border-real: #dee2e6;
 
 // Mobile var
+@mobile: ~"(max-width: 500px)";
+
+
+//font-size
+
+@text-big: 2.5rem;
+@text-medium: 1.8rem;
+@text-small: 1.5rem;
+@header-text: 4.5rem;
