--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,14 +18,28 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-
+    border:2px solid red;
+      @media @mobile{
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+      }
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      border: 2px solid blue;
+        @media @mobile{
+          width: 100%;
+          height: 100%;
+          margin: 0 auto;
+          padding: 0 auto;
+        }
     }
   }
+
+
 
   .visit-planets {
     padding: 15px;
@@ -45,9 +59,18 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
+    border: 2px solid purple;
+      @media @mobile{
+        flex-direction: column-reverse;
+        justify-content: center;
+        padding: 0 auto;
+        margin: 0 auto;
+        width: 100%;
+      }
 
     .walk-text {
       width: 50%;
+      border: 2px solid magenta;
 
       h3 {
         margin-bottom: 10px;
@@ -73,3 +96,37 @@
     }
   }
 }// home
+
+.btn{
+  .button();
+    @media @mobile{
+      margin: 0 auto;
+      padding: 0 auto;
+      width: 100%;
+    }
+}
+
+.header-nav{
+  display: flex;
+  justify-content: center;
+  background-color:@wild-sand;
+    h1{
+      font-size: @header-text;
+      margin: 0 auto;
+      text-align: center;
+    }
+}
+
+.main-img{
+  width: 100%;
+  @media @mobile{
+    width: 100%;
+    overflow: hidden;
+  }
+}
+
+.space{
+    @media @mobile{
+      padding-bottom: 8px;
+    }
+}
