--- a/index.css
+++ b/index.css
@@ -269,20 +269,26 @@ footer {
   padding: 50px 60px;
   display: flex;
   justify-content: center;
-  border: 2px solid purple;
 }
 @media (max-width: 500px) {
   .home .walk {
     flex-direction: column-reverse;
     justify-content: center;
-    padding: 0 auto;
-    margin: 0 auto;
+    padding: 20px 0;
+    margin: 20px 0;
     width: 100%;
   }
 }
 .home .walk .walk-text {
   width: 50%;
-  border: 2px solid magenta;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    justify-content: space-between;
+    margin: 20px 0;
+    padding: 0 auto;
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -290,14 +296,32 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  border: 2px solid teal;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 100%;
+    height: auto;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img img {
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 100%;
+  }
 }
 .btn {
   border: 2px solid #22283A;
