--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,45 +1,40 @@
 // Home Content
 
 .home {
-
   .intro {
-
     h2 {
       padding: 15px;
     }
 
     p {
-      padding:0 15px;
+      padding: 0 15px;
     }
-  
   }
 
   .space-images {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    border:2px solid red;
-      @media @mobile{
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-      }
+    border: 2px solid red;
+    @media @mobile {
+      flex-direction: column;
+      justify-content: space-between;
+      width: 100%;
+    }
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
       border: 2px solid blue;
-        @media @mobile{
-          width: 100%;
-          height: 100%;
-          margin: 0 auto;
-          padding: 0 auto;
-        }
+      @media @mobile {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        padding: 0 auto;
+      }
     }
   }
-
-
 
   .visit-planets {
     padding: 15px;
@@ -59,18 +54,23 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-    border: 2px solid purple;
-      @media @mobile{
-        flex-direction: column-reverse;
-        justify-content: center;
-        padding: 0 auto;
-        margin: 0 auto;
-        width: 100%;
-      }
+    @media @mobile {
+      flex-direction: column-reverse;
+      justify-content: center;
+      padding: 20px 0;
+      margin: 20px 0;
+      width: 100%;
+
+    }
 
     .walk-text {
       width: 50%;
-      border: 2px solid magenta;
+      @media @mobile {
+        justify-content: space-between;
+        margin: 20px 0;
+        padding: 0 auto;
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -81,52 +81,64 @@
       }
 
       .btn {
+        border: 2px solid teal;
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+      @media @mobile {
+        margin: 0 auto;
+        padding: 0 auto;
+        width: 100%;
+        height: auto;
+      }
+
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+        @media @mobile {
+          margin: 0 auto;
+          padding: 0 auto;
+          width: 100%;
+        }
       }
     }
   }
-}// home
+} // home
 
-.btn{
+.btn {
   .button();
-    @media @mobile{
-      margin: 0 auto;
-      padding: 0 auto;
-      width: 100%;
-    }
+  @media @mobile {
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 100%;
+  }
 }
 
-.header-nav{
+.header-nav {
   display: flex;
   justify-content: center;
-  background-color:@wild-sand;
-    h1{
-      font-size: @header-text;
-      margin: 0 auto;
-      text-align: center;
-    }
+  background-color: @wild-sand;
+  h1 {
+    font-size: @header-text;
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 
-.main-img{
+.main-img {
   width: 100%;
-  @media @mobile{
+  @media @mobile {
     width: 100%;
     overflow: hidden;
   }
 }
 
-.space{
-    @media @mobile{
-      padding-bottom: 8px;
-    }
+.space {
+  @media @mobile {
+    padding-bottom: 8px;
+  }
 }
