--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,7 +15,6 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    border: 2px solid red;
     @media @mobile {
       flex-direction: column;
       justify-content: space-between;
@@ -35,6 +34,7 @@
       }
     }
   }
+
 
   .visit-planets {
     padding: 15px;
@@ -68,7 +68,8 @@
       @media @mobile {
         justify-content: space-between;
         margin: 20px 0;
-        padding: 0 auto;
+        padding-right: 10px;
+        padding-left: 10px;
         width: 100%;
       }
 
@@ -82,6 +83,10 @@
 
       .btn {
         border: 2px solid teal;
+          @media @mobile{
+            padding: 25px 0;
+            font-size: @text-mediumish;
+          }
       }
     }
 
