--- a/index.css
+++ b/index.css
@@ -230,7 +230,6 @@ footer {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  border: 2px solid red;
 }
 @media (max-width: 500px) {
   .home .space-images {
@@ -286,7 +285,8 @@ footer {
   .home .walk .walk-text {
     justify-content: space-between;
     margin: 20px 0;
-    padding: 0 auto;
+    padding-right: 10px;
+    padding-left: 10px;
     width: 100%;
   }
 }
@@ -298,6 +298,12 @@ footer {
 }
 .home .walk .walk-text .btn {
   border: 2px solid teal;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    padding: 25px 0;
+    font-size: 2.2rem;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
