--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@
   width: 30%;
   border-radius: 5px;
 }
+.width {
+  width: 100%;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -230,6 +233,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  border: 2px solid aqua;
 }
 @media (max-width: 500px) {
   .home .space-images {
