--- a/less/home-page.less
+++ b/less/home-page.less
@@ -14,7 +14,8 @@
   .space-images {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    .width();
+    border: 2px solid aqua;
     @media @mobile {
       flex-direction: column;
       justify-content: space-between;
@@ -26,12 +27,12 @@
       border-radius: 20px;
       height: 100%;
       border: 2px solid blue;
-      @media @mobile {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        padding: 0 auto;
-      }
+        @media @mobile {
+          .width();
+          height: 100%;
+          margin: 0 auto;
+          padding: 0 auto;
+        }
     }
   }
 
