--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,16 +1,20 @@
 // Mixins Here
 
-.button{
+.button(@width){
     border:2px solid @btn-bg-color;
     background-color: @btn-bg-color;
     color: white;
     text-align: center;
     font-size: 1.9rem;
     padding: 5px 0 5px 0;
-    width: 30%;
+    width: @width;
     border-radius: 5px;
 }
 
 .width{
     width: 100%;
+}
+
+.marginauto{
+    margin: 0 auto;
 }
