--- a/less/home-page.less
+++ b/less/home-page.less
@@ -91,6 +91,11 @@
       }
     }
 
+    .btn:hover{
+      background-color: green;
+      color: black;
+    }
+
     .walk-img {
       width: 46%;
       margin-left: 4%;
@@ -106,7 +111,7 @@
         height: auto;
         border-radius: 10px;
         @media @mobile {
-          .margin();
+          .marginauto();
           padding: 0 auto;
           width: 100%;
         }
@@ -117,6 +122,7 @@
 
 .btn {
   .button(30%);
+  cursor: pointer;
   @media @mobile {
     margin: 0 auto;
     padding: 0 auto;
