--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@
 .marginauto {
   margin: 0 auto;
 }
+.displaynada {
+  display: none;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -226,7 +229,6 @@ footer {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  border: 2px solid aqua;
 }
 @media (max-width: 500px) {
   .home .space-images {
@@ -240,7 +242,6 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
-  border: 2px solid blue;
 }
 @media (max-width: 500px) {
   .home .space-images img {
@@ -248,6 +249,24 @@ footer {
     height: 100%;
     margin: 0 auto;
     padding: 0 auto;
+  }
+}
+@media (max-width: 500px) {
+  .home .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .launch {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .blast {
+    width: 100%;
+    height: 100%;
+    margin: 10px 0;
+    padding: 5px 0;
   }
 }
 .home .visit-planets {
@@ -293,9 +312,6 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-text .btn {
-  border: 2px solid red;
-}
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
     padding: 25px 0;
@@ -303,7 +319,6 @@ footer {
   }
 }
 .home .walk .btn:hover {
-  background-color: green;
   color: black;
 }
 .home .walk .walk-img {
@@ -371,4 +386,38 @@ footer {
   .space {
     padding-bottom: 8px;
   }
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
