--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,7 +15,6 @@
     display: flex;
     flex-wrap: wrap;
     .width();
-    border: 2px solid aqua;
     @media @mobile {
       flex-direction: column;
       justify-content: space-between;
@@ -26,13 +25,30 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-      border: 2px solid blue;
         @media @mobile {
           .width();
           height: 100%;
           margin: 0 auto;
           padding: 0 auto;
         }
+    }
+  }
+ .sky{
+      @media @mobile{
+        .displaynada();
+      }
+  }
+  .launch{
+      @media @mobile{
+        .displaynada();
+      }
+  }
+  .blast{
+    @media @mobile{
+      .width();
+      height: 100%;
+      margin: 10px 0;
+      padding: 5px 0;
     }
   }
 
@@ -83,7 +99,6 @@
       }
 
       .btn {
-        border: 2px solid red;
           @media @mobile{
             padding: 25px 0;
             font-size: @text-mediumish;
@@ -92,7 +107,6 @@
     }
 
     .btn:hover{
-      background-color: green;
       color: black;
     }
 
@@ -153,4 +167,39 @@
   @media @mobile {
     padding-bottom: 8px;
   }
+}
+
+
+///contactform css
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
