--- a/less/home-page.less
+++ b/less/home-page.less
@@ -107,6 +107,7 @@
     }
 
     .btn:hover{
+      background-color: green;
       color: black;
     }
 
@@ -174,6 +175,10 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
+body{
+  font-size: @text-mediumish;
+}
+
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -182,20 +187,23 @@ input[type=text], select, textarea {
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
+  font-size: @text-mediumish;
   resize: vertical;
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
+  background-color: @btn-bg-color;
   color: white;
   padding: 12px 20px;
   border: none;
+  font-size: 1.9rem;
   border-radius: 4px;
   cursor: pointer;
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: green;
+  color: black;
 }
 
 .container {
