--- a/less/home-page.less
+++ b/less/home-page.less
@@ -158,10 +158,12 @@
 
 .main-img {
   width: 100%;
-  @media @mobile {
-    width: 100%;
-    overflow: hidden;
-  }
+  margin: 0 auto;
+  padding: 0 auto;
+    @media @mobile {
+      width: 100%;
+      overflow: hidden;
+    }
 }
 
 .space {
@@ -176,7 +178,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 body{
-  font-size: @text-mediumish;
+  font-size: @text-medium;
 }
 
 input[type=text], select, textarea {
@@ -187,7 +189,7 @@ input[type=text], select, textarea {
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  font-size: @text-mediumish;
+  font-size: @text-medium;
   resize: vertical;
 }
 
@@ -196,8 +198,8 @@ input[type=submit] {
   color: white;
   padding: 12px 20px;
   border: none;
-  font-size: 1.9rem;
-  border-radius: 4px;
+  font-size: @text-medium;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -210,4 +212,10 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+.intro{
+  .width();
+  margin: 0 auto;
+  padding: 0 auto;
 }
