--- a/less/global.less
+++ b/less/global.less
@@ -18,7 +18,8 @@ html, body {
 }
 
 body{
-  width: 100%;
+  .width();
+  padding: 0 auto;
   margin: 0 auto;
     @media @mobile{
       margin: 0 auto;
