--- a/less/global.less
+++ b/less/global.less
@@ -7,28 +7,33 @@ html {
   font-size: 62.5%;
   margin: 0 auto;
   max-width: 800px;
-    @media @mobile{
-      width: 100%;
-    }
+  @media @mobile {
+    width: 100%;
+  }
 }
 
-html, body {
-  font-family: 'Ubuntu', sans-serif;
+html,
+body {
+  font-family: "Ubuntu", sans-serif;
   color: @main-font-color;
 }
 
-body{
+body {
   .width();
   padding: 0 auto;
   margin: 0 auto;
-    @media @mobile{
-      margin: 0 auto;
-      width: 100%;
-    }
+  @media @mobile {
+    margin: 0 auto;
+    width: 100%;
+  }
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Russo One", sans-serif;
   color: @header-font-color;
 }
 
@@ -49,6 +54,5 @@ p {
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto;
 }
-
