--- a/less/home-page.less
+++ b/less/home-page.less
@@ -26,33 +26,33 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-        @media @mobile {
-          .width();
-          height: 100%;
-          margin: 0 auto;
-          padding: 0 auto;
-        }
+      @media @mobile {
+        .width();
+        height: 100%;
+        margin: 0 auto;
+        padding: 0 auto;
+      }
     }
   }
- .sky{
-      @media @mobile{
-        .displaynada();
-      }
+  .sky {
+    @media @mobile {
+      .displaynada();
+    }
   }
-  .launch{
-      @media @mobile{
-        .displaynada();
-      }
+  .launch {
+    @media @mobile {
+      .displaynada();
+    }
   }
-  .blast{
-    @media @mobile{
+  .blast {
+    @media @mobile {
       .width();
       height: 100%;
       margin: 10px 0;
       padding: 5px 0;
+      padding-top: 15px;
     }
   }
-
 
   .visit-planets {
     padding: 15px;
@@ -78,7 +78,6 @@
       padding: 25px 0 0;
       margin: 5px 0;
       width: 100%;
-
     }
 
     .walk-text {
@@ -100,14 +99,14 @@
       }
 
       .btn {
-          @media @mobile{
-            padding: 25px 0;
-            font-size: @text-mediumish;
-          }
+        @media @mobile {
+          padding: 25px 0;
+          font-size: @text-mediumish;
+        }
       }
     }
 
-    .btn:hover{
+    .btn:hover {
       background-color: green;
       color: black;
     }
@@ -160,10 +159,10 @@
 .main-img {
   .width();
   overflow: hidden;
-    @media @mobile {
-      width: 100%;
-      overflow: hidden;
-    }
+  @media @mobile {
+    width: 100%;
+    overflow: hidden;
+  }
 }
 
 .space {
@@ -172,16 +171,21 @@
   }
 }
 
-
 ///contactform css
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
 
-body{
+body {
   font-size: @text-medium;
 }
 
-input[type=text], select, textarea {
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -193,7 +197,7 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
+input[type="submit"] {
   background-color: @btn-bg-color;
   color: white;
   padding: 12px 20px;
@@ -203,7 +207,7 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type="submit"]:hover {
   background-color: green;
   color: black;
 }
@@ -213,7 +217,7 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
 }
 
-.intro{
+.intro {
   .width();
   margin: 0 auto;
   padding: 0 auto;
