parameter colors added

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -107,7 +107,7 @@
     }
 
     .btn:hover {
-      background-color: green;
+      background-color: rgb(3, 151, 3);
       color: black;
     }
 
@@ -208,7 +208,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: green;
+  background-color: rgb(3, 151, 3);
   color: black;
 }
 
