--- a/index.css
+++ b/index.css
@@ -325,7 +325,7 @@ footer {
   }
 }
 .home .walk .btn:hover {
-  background-color: green;
+  background-color: #039703;
   color: black;
 }
 .home .walk .walk-img {
@@ -427,7 +427,7 @@ input[type="submit"] {
   cursor: pointer;
 }
 input[type="submit"]:hover {
-  background-color: green;
+  background-color: #039703;
   color: black;
 }
 .container {
