--- a/index.css
+++ b/index.css
@@ -326,7 +326,7 @@ footer {
 }
 .home .walk .btn:hover {
   background-color: #039703;
-  color: black;
+  color: #1a1818;
 }
 .home .walk .walk-img {
   width: 46%;
