--- a/less/home-page.less
+++ b/less/home-page.less
@@ -108,7 +108,7 @@
 
     .btn:hover {
       background-color: rgb(3, 151, 3);
-      color: black;
+      color: rgb(26, 24, 24);
     }
 
     .walk-img {
