--- a/index.css
+++ b/index.css
@@ -212,12 +212,13 @@ nav a {
   }
 }
 footer {
-  color: #22283B;
+  color: black;
   background: #F6F6F6;
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
+  font-weight: bold;
   justify-content: center;
   align-items: center;
 }
