--- a/less/footer.less
+++ b/less/footer.less
@@ -1,11 +1,12 @@
 // Footer Styles
 footer {
-  color: #22283B;
+  color:black;
   background: @wild-sand;
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
+  font-weight: bold;
   justify-content: center;
   align-items: center;
 }
